# cadastro-De-Aluno

./: CMakeLists.txt  Exercicio02.cpp  Exercicio02.h  Exercicio03.cpp  Exercicio03.h  Exercicio04.cpp  Exercicio04.h  Exercicio05.cpp  Exercicio05.h  README.md  exercicio01.cpp  exercicio01.h  exercicio06.cpp  exercicio06.h  exercicio07.cpp  exercicio07.h  main.cpp
