cmake_minimum_required(VERSION 3.29)
project(exerciciosStructSubprogramas)

set(CMAKE_CXX_STANDARD 20)

add_executable(exerciciosStructSubprogramas main.cpp
        Exercicio02.cpp
        Exercicio02.h
        Exercicio03.cpp
        Exercicio03.h
        Exercicio04.cpp
        Exercicio04.h
        Exercicio05.cpp
        Exercicio05.h
        exercicio06.cpp
        exercicio06.h
        exercicio07.cpp
        exercicio07.h)
